[project]
name = ""
version = ""
description = ""
authors = [
    {name = "YakMM", email = "yak.mayam@gmail.com"},
]
dependencies = [
    "discord.py @ git+https://github.com/Rapptz/discord.py@45d498c1b76deaf3b394d17ccf56112fa691d160",
    "requests==2.28.2",
    "numpy==1.24.2",
    "pytz==2023.3",
    "aiohttp==3.7.4.post0",
    "pymongo==4.3.3",
    "gspread==5.8.0",
    "python-dateutil==2.8.2",
    "schedule==1.2.0",
    "Pillow==9.5.0"
]
requires-python = ">=3.8,<3.10"
license = {text = "MIT"}


[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
