[project]
name = ""
version = ""
description = ""
authors = [
    {name = "YakMM", email = "yak.mayam@gmail.com"},
]
dependencies = [
    "discord.py @ git+https://github.com/yakMM/discord.py@1.x",
    "requests==2.31.0",
    "numpy==1.26.4",
    "pytz==2024.1",
    "aiohttp==3.7.4.post0",
    "pymongo==4.6.3",
    "gspread==6.1.0",
    "python-dateutil==2.8.2",
    "schedule==1.2.1",
    "Pillow==9.5.0"
]
requires-python = "==3.11.*"
license = {text = "MIT"}


[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = [
    "sphinx==6.1.3",
    "sphinx-rtd-theme==1.2.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
